# EASGen

./: .gitignore  README.md  builder  setup.cfg  setup.py
.github/workflows/: main.yml
EASGen/: EASGen.py  __init__.py
src/EASGen/: EASGen.py
src/EASGen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
