[metadata]
name = EASGen
version = 0.1.0
author = A-c0rN
author_email = acrn@gwes-eas.network
description = A Python library to generate EAS SAME Audio using Raw Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/A-c0rN/EASGen
project_urls =
    Bug Tracker = https://github.com/A-c0rN/EASGen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src